# aula17_bootcamp

./: README.md  desafio.db  exercicio_01.py  exercicio_04.py  meubanco.db  pyproject.toml
